fix: Windows clipping over task bar

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
     padding-right: 20px;
     padding-left: 5px;
     position: absolute;
-    z-index: 3;
+    z-index: 49;
 
     display: flex;
     gap: 5px;
